# fl-app1

./: MIGRATION_NEXT_STEPS.md  QUICK_AUTH_GUIDE.md  analysis_options.yaml  build.yaml  openapi.json  pubspec.yaml
.github/: copilot-instructions.md
.github/workflows/: deploy-web.yml
android/app/: build.gradle.kts
docs_ai/2025_11/: 05_令牌存储策略修正.md  05_修复NavigationRail浮动菜单GoRouterState错误.md  05_修复NavigationRail点击展开和路由错误页面.md  05_响应式侧边栏菜单和菜单项重命名.md  05_登录页面输入优化和简化版用户菜单.md  06_将管理员标识从is_admin迁移到role.md  07_pages目录代码规范优化.md  08_优化部署工作流动态分支推送.md  08_修复取消按钮和重构旧版服务信息编辑.md  11_操作.md  19_购买记录页面组件化重构.md  21_修复工单列表API类型.md  21_添加工单详情回复关闭功能.md  22_节点管理界面.md  22_节点管理界面_快速参考.md  22_节点管理界面_测试指南.md  23_修复AndroidManifest.xml解析错误.md  23_修复导航栏问题.md  23_导航栏问题_真正的解决方案.md  23_所有搜索页面改为可滚动_完成报告.md  23_搜索列表页面继承优化方案.md  23_搜索框不置顶修改.md  23_清理未使用文件.md  23_路由系统重写修复Android返回和Web刷新问题.md  23_路由重写项目总结.md  24_修复SS节点管理页面类型错误.md  24_修复节点管理页面类型错误.md  24_修复购买记录编辑API调用错误.md  24_修改节点管理搜索功能布局.md  27_修复节点管理页面API模型类名.md  27_修复购买记录页面API模型类名错误.md  27_工单详情页面添加用户ID跳转功能.md  27_添加API请求加载提示.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  routes.dart  version_page.dart
lib/api/: base_url.dart  export.dart  rest_client.dart
lib/page/: home_page.dart
lib/pages/: home_page.dart
linux/: CMakeLists.txt
test/: token_test.dart  user_service_test.dart  widget_test.dart
tool/: test_gravatar.dart
wasm_pow/: .gitignore  Cargo.toml  PROJECT_README.md  QUICKSTART.md  README.md  build.sh
wasm_pow/src/: lib.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+453 files in other folders)
